file(基于二维码的单向通信系统)：完成博文

--- a/src/content/blog/基于二维码的单向图像通信系统设计与实现.md
+++ b/src/content/blog/基于二维码的单向图像通信系统设计与实现.md
@@ -1,5 +1,5 @@
 ---
-title: 基于二维码的单向图像通信系统设计与实现（发送端）
+title: 基于二维码的单向图像通信系统设计与实现
 description: 本项目探索了使用二维码作为信息载体，通过摄像头接收，实现无需网络的单向数据传输机制。支持图像分段、帧同步、丢帧检测与简单纠错。核心目标是构建一个稳定的 10–18fps 通信链路，未来可扩展到文件、文本等多种数据类型传输。
 pubDate: 05 23 2025
 categories:
@@ -9,7 +9,7 @@ tags:
   - image-communication
   - python
 ---
-# 基于二维码的单向图像通信系统设计与实现（发送端）
+# 基于二维码的单向图像通信系统设计与实现
 
 前两天参加了学校的科研训练，老师发布了一个课题，要求我们做一个基于图像处理的可见光通信设计与实现，考虑到自己之前学过图像处理的理论知识，想要掌握他们还是需要一些实际的项目实践，于是我便开始了这项课题的研究。
 
@@ -22,33 +22,33 @@ tags:
 
 本项目使用 Python 语言进行开发，使用二维码作为信息载体，通过摄像头接收，实现无需网络的单向数据传输机制。二维码的优点是体积小、信息量大、易于携带、易于解析，可以满足本项目的需求。使用 OpenCV 库进行图像处理，可以快速实现图像分段、帧同步、丢帧检测与简单纠错。
 
-## 构建过程 发送端
+## 构建细节--发送端
 
 #### 切片的实现
 用一个列表推导式，实现把读取的文件从头到尾按照传入的大小参数切成若干小块，形成一个列表。
 
-```python
-def read_file_to_chunks(filename, chunk_size=72):  #文件读取，切片
-    with open(filename, 'rb') as f:
-        data = f.read()
-    chunks = [data[i:i + chunk_size] for i in range(0, len(data), chunk_size)]
-    print(f"[INFO] 文件大小: {len(data)} 字节, 被切分为 {len(chunks)} 块")
-    return chunks
-```
+    ```python
+    def read_file_to_chunks(filename, chunk_size):
+        # 读取文件并按块切分
+        with open(filename, 'rb') as f:
+            data = f.read()
+        chunks = [data[i:i + chunk_size] for i in range(0, len(data), chunk_size)]
+        print(f"[INFO] 文件大小: {len(data)} 字节, 被切分为 {len(chunks)} 块")
+        return chunks
+    ```
 #### 封装结构
-`[帧头 (4B)] + [原始数据块 (≤72B)] + [CRC32校验码 (4B)]`
-``` python
-def encode_chunk_to_qr(chunk, index):
-    # 帧头 = 4字节帧号（uint32）+ 数据内容（Base64）
-    header = struct.pack("I", index)
+
+`[帧头 (8B)4字节是帧号，4字节是总帧数] + [原始数据块 (≤72B)] + [CRC32校验码 (4B)]`
+```
+def encode_chunk_to_qr(chunk, index, total):
+    # 编码块为二维码
+    header = struct.pack("II", total, index)
     data = header + chunk
-    crc = struct.pack("I", zlib.crc32(data))
-    #帧头 + 帧内容 + 校验码 = 4字节帧号+数据内容+4字节校验码
-    payload = base64.b64encode(data + crc)
+    crc = struct.pack("I", zlib.crc32(data))#CRC32 校验值
+    payload = base64.b64encode(data + crc)#Base64 编码
     ···
     ···
 ```
-
 - **帧头：**   
     **struct模块**把Python数据转换成字节序列（pack）,或把字节序列解析回Python数据（unpack）常用于网络传输、文件读写、协议解析等。
 
@@ -87,10 +87,20 @@ Base64 编码是一种把二进制数据转换为 ASCII 字符串的方式，使
 - **Payload = 有效载荷**   
 在数据通信、网络协议、嵌入式系统等领域，“payload”指的是：真正承载有意义内容的数据部分，不包括头部（如帧头、地址、标志）或附加校验等控制信息。虽然这个 payload 包含帧号和 CRC，但它是 这个二维码里要传递的“有效数据总内容”，就是要被编码到 QR 图像里的实际内容，所以起名为 payload 很合适。
 
+    ```python
+        ··· ···
+    qr = qrcode.QRCode(error_correction=qrcode.constants.ERROR_CORRECT_L)# L=7%
+    qr.add_data(payload)
+    qr.make(fit=True)#自适应二维码大小
+    img = qr.make_image(fill_color="black", back_color="white").convert('RGB')
+    img_cv = np.array(img)
+    img_cv = cv2.cvtColor(img_cv, cv2.COLOR_RGB2BGR)
+    return img_cv.copy()#BGR格式，np.uint8 类型
+    ```
 - **QR码**   QR code，Quick Response code
 
     QR码是一种二维条形码，由日本 Denso Wave 公司于1994年发明。相较于传统一维条形码，它可以存储更多信息、更快读取、更强容错能力，因此被广泛应用于支付、识别、数据传输等场景。
-```python
+    ```python
     ···
     ···
     qr = qrcode.QRCode(error_correction=qrcode.constants.ERROR_CORRECT_Q)
@@ -101,7 +111,7 @@ Base64 编码是一种把二进制数据转换为 ASCII 字符串的方式，使
     return np.array(img)[:, :, ::-1]
     # PIL → OpenCV
     # BGR PIL默认是RGB，OpenCV默认是BGR，用 [:, :, ::-1] 反转通道顺序，方便用 OpenCV 处理
-```
+    ```
 
 - **生成 QR 图像**  
     QR码使用 Reed-Solomon纠错，能恢复部分缺失或损坏的数据，分为四级：L（7%）、M（15%）、Q（25%）、H（30%）。
@@ -126,22 +136,98 @@ Base64 编码是一种把二进制数据转换为 ASCII 字符串的方式，使
 
     [:, :, ::-1]：将 RGB 通道反转为 BGR，以适配 OpenCV
 
-- **生成二维码帧**
+#### **生成二维码帧**
 
     从file_path读取文件，切分成chunk_size大小的块，调用encode_chunk_to_qr函数编码成二维码帧，返回帧列表。
-```python
-def generate_qr_frames(file_path, chunk_size=72):
-```
-- **播放二维码帧**
+    ```python
+    def generate_qr_frames(file_path, chunk_size=72):
+    ```
+#### **播放二维码帧**
 
     调用cv2.imshow()播放二维码帧，并在左上角叠加帧序号文本。
 
+#### **播放完全帧，然后播放丢失帧**
+    ```python
+    def play_full_then_missing(full_frames, chunks, missing_frame_path, fps, fps_resend):
+    ```
+    这个函数的逻辑是先播放完整的所有帧，然后根据接收端保存的json文件，读取其中对用的序列号，播放丢失的帧。
+
+## 接收端
+#### 解析二维码载荷（Base64解码 + 结构体拆包）
 ```python
-def play_qr_frames(frames, fps=12):
+def parse_payload(payload_b64):
+    raw = base64.b64decode(payload_b64)
+    total = struct.unpack("I", raw[0:4])[0]
+    frame_id = struct.unpack("I", raw[4:8])[0]
+    crc_recv = struct.unpack("I", raw[-4:])[0]
+    data_chunk = raw[8:-4]
+    crc_calc = zlib.crc32(raw[:-4])
+    is_valid = (crc_calc == crc_recv)
+    return total, frame_id, data_chunk, is_valid
 ```
+数据帧格式固定：
+[4字节总帧数][4字节当前帧ID][数据内容][4字节CRC32校验码]
+
+先Base64解码，还原原始二进制数据。
+
+使用 struct.unpack 按固定字节切片提取信息。
+
+通过 zlib.crc32 校验确保数据正确无误。
+#### 缓存帧数据，避免重复覆盖
+```python
+def buffer_frame(received_dict, frame_id, data_chunk):
+    if frame_id not in received_dict:
+        received_dict[frame_id] = data_chunk
+利用 Python 的 OrderedDict 维护已接收帧的缓存。
+```
+只缓存新到的帧，防止重复覆盖。
+
+#### 缺失帧检测与实时更新
+```python
+
+def update_missing_frames_file(total, received_dict, filename=MISSING_FRAME_PATH):
+    missing = [i for i in range(1, total + 1) if i not in received_dict]
+    with open(filename, 'w') as f:
+        json.dump(missing, f, indent=2)
+```        
+维护一个缺失帧列表文件，供发送端或后续程序查询。
+
+动态写入缺失帧编号，方便检测丢包情况。
+
+这里实际上是偷懒了，最开始只有单向识别的时候，由于摄像头很难完美的识别到所有帧，基本上每次发送都会出现丢帧现象，原本打算使用向前差分的方式来补帧，但后来发现这个方法并不好用，而且略微复杂。不好用是因为摄像头有时候会连续丢失多帧，用这种有限的恢复手段杯水车薪。最终还是妥协给了工时，用了最简单的存帧号的方法。
+
+#### 文件重组与保存
+```python
+def reconstruct_file(received_dict):
+    file_bytes = b""
+    max_frame_id = max(received_dict.keys())
+    for i in range(1, max_frame_id + 1):
+        if i in received_dict:
+            file_bytes += received_dict[i]
+        else:
+            print(f"[ERROR] 丢失帧{i}，文件可能不完整")
+    return file_bytes
+
+def save_file(filename, file_bytes):
+    with open(filename, "wb") as f:
+        f.write(file_bytes)
+```        
+根据帧ID顺序拼接所有缓存的帧数据。
+
+## 总结
+
+因为技术高度重合，所以接收端的篇幅会少很多，毕竟大部分东西就是发送端的逆向。
+
+这次做的项目还是比较有意思的，因为整个过程的可视化程度很高，可以感受到用二维码实现的光通信技术为什么没有成为行业主流 ：）
+
+传递速度较慢，受信道影响剧烈，甚至对硬件的要求倒逼了软件方面的妥协：因为奈奎斯特原理，能传输的信息只能是摄像头采集帧率的一半一下（实际情况下如果只用一般会导致大量的失帧情况，所以要降低帧率3或4倍才行）
+
+这也是为什么双向通信非常重要，即使是只有单向的反馈，也可以大胆的提高采集帧率到最高（摄像头帧率的一半），因为失真问题可以大方的交给后续的重传处理。系统整体的传输速度就大大提高了。
+
+这次的项目学到了许多东西，比如qr二维码的编码、解码、校验、帧同步、丢帧检测等等，对文件的分包也有了一定的了解。base64编码也很有意思，他的有点在于数据是安全的，可预测的（二进制转换为64个字典符号），缺点在于数据量会增加约33%，但为了可靠性和通用性，这是值得的代价。
 
 ----
 
-###### 为避免博文过长，本文只展示核心代码，完整代码请参考项目仓库。
+## 参考引用
 
-###### 关于接收端的实现，参考[基于二维码的单向图像通信系统设计与实现（接收端）]()。 
+我的github项目地址：[QRCam](https://github.com/Flyer-moji/QRCam)
