file(二维码通信系统)：更新图床图片

--- a/src/content/blog/基于二维码的单向图像通信系统设计与实现.md
+++ b/src/content/blog/基于二维码的单向图像通信系统设计与实现.md
@@ -23,7 +23,9 @@ tags:
 本项目使用 Python 语言进行开发，使用二维码作为信息载体，通过摄像头接收，实现无需网络的单向数据传输机制。二维码的优点是体积小、信息量大、易于携带、易于解析，可以满足本项目的需求。使用 OpenCV 库进行图像处理，可以快速实现图像分段、帧同步、丢帧检测与简单纠错。
 
 ## 构建细节--发送端
+![发送端二维码显示](https://blog-picbed-1317989631.cos.ap-hongkong.myqcloud.com/20250529132342.png)
 
+![发送端讯息](https://blog-picbed-1317989631.cos.ap-hongkong.myqcloud.com/20250529132456.png)
 #### 切片的实现
 用一个列表推导式，实现把读取的文件从头到尾按照传入的大小参数切成若干小块，形成一个列表。
 
@@ -153,6 +155,11 @@ Base64 编码是一种把二进制数据转换为 ASCII 字符串的方式，使
     这个函数的逻辑是先播放完整的所有帧，然后根据接收端保存的json文件，读取其中对用的序列号，播放丢失的帧。
 
 ## 接收端
+接收端由opencv调取摄像头，通过二维码识别，解析二维码载荷，缓存帧数据，缺失帧检测与实时更新，文件重组与保存。
+![接收端实时显示](https://blog-picbed-1317989631.cos.ap-hongkong.myqcloud.com/20250529132149.png)
+
+![接收端讯息](https://blog-picbed-1317989631.cos.ap-hongkong.myqcloud.com/20250529132245.png)
+
 #### 解析二维码载荷（Base64解码 + 结构体拆包）
 ```python
 def parse_payload(payload_b64):
