--- a/src/content/blog/frosti-mdx.mdx
+++ b/src/content/blog/frosti-mdx.mdx
@@ -3,6 +3,8 @@ title: Using mdx in Frosti
 description: Using MDX in Frosti to enrich article content with more components
 pubDate: 07 12 2024
 image: /image/image2.jpg
+categories:
+  - knowledge
 tags:
   - mdx
 ---
