file(20250615):增加图片到博文

--- a/src/content/blog/20250615-linux系统的搭建.md
+++ b/src/content/blog/20250615-linux系统的搭建.md
@@ -38,6 +38,14 @@ tags:
       
       映像模式：ISO 模式写入（推荐）
 
+3. 为Ubuntu配置磁盘空间
+
+    在win系统种，`我的电脑`-`管理`-`磁盘`-`磁盘管理`，可以看到我的磁盘列表。
+
+    通过右键压缩或删除卷，可以释放磁盘空间。按照电脑配置自行分配空间。
+
+    关于Windows动态硬盘对Ubuntu的不兼容问题，参见下文《配置机械硬盘为 Ubuntu 扩展数据盘》。
+
 
 ## Ubuntu 安装过程
 
@@ -45,9 +53,15 @@ tags:
 
     由u盘引导进入安装界面，是一个黑色界面，进入安装器（Try or Install Ubuntu）
 
+    ![ubuntu引导界面](https://blog-picbed-1317989631.cos.ap-hongkong.myqcloud.com/20250616081352.png)
+
     多数设置默认即可，直到进入磁盘分区设置页面。
 
 2. 手动分区设置（`Manual partitioning`）
+
+![初始界面](https://blog-picbed-1317989631.cos.ap-hongkong.myqcloud.com/20250616081545.png)
+
+主要将空余硬盘空间进行如下推荐分配
 
 | 分区顺序 | 大小       | 挂载点     | 类型   | 格式   | 说明                  |
 | ---- | -------- | ------- | ---- | ---- | ------------------- |
@@ -58,12 +72,16 @@ tags:
 
 确保“Device for bootloader installation”选择的是整盘 /dev/nvme0n1。
 
+![目标设置](https://blog-picbed-1317989631.cos.ap-hongkong.myqcloud.com/20250616081854.png)
+
 之后就等待安装完成即可。
 
 ##  配置机械硬盘为 Ubuntu 扩展数据盘
 
   **注意：以下操作会清空该盘所有数据，注意备份！**
-      
+
+  ![手糊没拍清  :3 ](https://blog-picbed-1317989631.cos.ap-hongkong.myqcloud.com/14230f2c5cb3094e574e5265f8eb692.png)
+
       如果在 Ubuntu 的 Disks 工具中看到如下内容：
 
       /dev/sda1
@@ -71,27 +89,20 @@ tags:
       内容：Unknown
 
       说明这是 Windows 的“动态磁盘”，Ubuntu 无法识别。
-  我在之前使用windows的时候，磁盘管理器磁盘类型为“动态磁盘”，而 Ubuntu 无法识别。所以，需要在 Windows 中转换为基本磁盘。这就得先把磁盘备份，清空，再重新配置了。
+
+  我在之前使用windows的时候，磁盘类型为“动态磁盘”，而 Ubuntu 无法识别。所以，需要在 Windows 中转换为基本磁盘。这就得先把磁盘备份，清空，再重新配置了。
     
   这方面装过电脑的人应该都有经验，win这边的操作不赘述了。目标就是把一个大容量的机械硬盘（如 2T、4T、8T）转换为基本磁盘。（一般给win留下一半左右的空间）
 
-  之后在 Ubuntu 中，使用disks可视化工具，将该盘识别为扩展数据盘。
-
-        使用 Disks 工具新建分区
-        打开 Disks，选中 /dev/sda
-        在未分配空间上点击“+”创建新分区：
-        文件系统：ext4
-        分区大小：全部或自定义
-        创建完成后，点击齿轮 → Edit Mount Options：
-        取消“User Session Defaults”
-        设置挂载点为 /mnt/hdd_data
-        勾选“Mount at startup”
+  之后在 Ubuntu 中，使用disks工具，将该盘格式化为ext4文件系统，并将其为扩展数据盘。
 
   之后就可以像普通硬盘一样使用了。他的位置一般在`/media/user'sname/memoryname`。
   
 ## 盘符隔离的方法
 
 为了稳定，可以把win和ubuntu的盘符隔离。在disks工具中，选择对应盘符，`齿轮`-`编辑挂载选项`，确保`用户会话默认值`和`下侧的选项`均取消勾选。
+
+![](https://blog-picbed-1317989631.cos.ap-hongkong.myqcloud.com/20250616082443.png)
 
 ## 总结
 
