fix(blog0616):修改了description必须为字符串

--- a/src/content/blog/20250616-linux命令.md
+++ b/src/content/blog/20250616-linux命令.md
@@ -1,6 +1,6 @@
 ---
 title: "[备忘录]linux命令"
-description: 
+description:这本质上是一份Linux命令的备忘录，主要是记录一些常用的命令，方便日常使用。
 pubDate: 06 16 2025
 categories:
   - knowledge
