--- a/src/content/blog/05.DQL_查询.md
+++ b/src/content/blog/05.DQL_查询.md
@@ -7,7 +7,24 @@ categories:
 tags:
   - SQL
 ---
+
 ## DQL 查询
+
+### 运行顺序
+
+```sql
+select           # 4
+
+from             # 1
+
+where            # 2
+
+group by         # 3
+
+order by         # 5
+
+limit            # 6
+```
 
 ### select 语句
 
@@ -92,5 +109,31 @@ GROUP BY column1, column2 [having condition]; # 过滤分组后的结果
 
 - where：在分组前过滤数据，在分组后不再使用。
 - having：在分组后过滤分组后的结果，在分组前不使用。group by 会把表分组为若干个只含有`column1, column2, aggregate_function(column3)`的子表。然后，having 子句会对这些子表进行过滤，只保留满足条件的子表。
+
+### 排序 order by
+对查询结果进行排序。
+
+```sql
+SELECT column1, column2, column3,...
+FROM table_name
+ORDER BY column1, column2 [DESC|ASC];
+```
+
+1.DESC：降序，默认升序，可省略。
+2.ASC：升序。
+
+### 分页查询 limit
+
+限制返回结果的数量。limit是mysql的方言。
+
+```sql
+SELECT column1, column2, column3,...
+FROM table_name
+LIMIT [offset,] count;
+```
+1.offset：索引起始位置（偏移量，0就是不偏移，单位是条数，偏移4就是从第五条数据开始），默认为0，索引页码：offset/count+1，如第一页，offset=0，count=10，则返回索引为1-10的数据，第二页，offset=10，count=10，则返回索引为11-20的数据。
+
+2.count：返回的结果数量，默认为10，最大值为1000，也就是每一页显示的记录数。
+
 
 
