--- a/src/content/blog/08.约束.md
+++ b/src/content/blog/08.约束.md
@@ -19,6 +19,14 @@ tags:
 
 约束作用于表中的字段，可以在创建、修改表的时候添加。
 
+```sql
+creat table emp (
+      id int primary key auto_increment COMMENT 'id 主键 自增'
+      ...
+)comment '员工表'
+
+```
+
 ## 外键约束
 
 外键约束：
